--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,5 +45,6 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.13"
-  }
+  },
+  "proxy": "http://localhost:5001"
 }
