Configure Vercel deployment with Flask backend and React frontend

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,13 @@
     {
       "src": "api/app.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
     }
   ],
   "routes": [
@@ -12,8 +19,12 @@
       "dest": "api/app.py"
     },
     {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|ico|json|txt))",
+      "dest": "frontend/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/api/app.py"
+      "dest": "frontend/index.html"
     }
   ]
 }
