--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "dev": "npm start",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "vercel-build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "sync-config": "node scripts/sync-config.js"
