--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "buildCommand": "cd frontend && npm install && npm run build",
   "builds": [
     {
       "src": "api/app.py",
@@ -12,7 +13,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/api/app.py"
+      "dest": "api/app.py"
     }
   ]
 }
