Fix Vercel deployment to build both frontend and backend
- Configure @vercel/static-build for React frontend
- Configure @vercel/python for Flask backend
- Add proper routes to serve static files and API endpoints separately
- Add build.sh helper script

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,13 @@
 {
-  "buildCommand": "cd frontend && npm install && npm run build",
+  "version": 2,
   "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    },
     {
       "src": "api/app.py",
       "use": "@vercel/python"
@@ -12,8 +19,16 @@
       "dest": "api/app.py"
     },
     {
+      "src": "/(static/.*)",
+      "dest": "frontend/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|ico|json))",
+      "dest": "frontend/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "api/app.py"
+      "dest": "frontend/index.html"
     }
   ]
 }
