--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -3,13 +3,13 @@
   "name": "AskAlma - Your AI Academic Advisor",
   "icons": [
     {
-      "src": "Icon.png",
-      "type": "image/png",
+      "src": "Icon.jpeg",
+      "type": "image/jpeg",
       "sizes": "512x512"
     },
     {
-      "src": "Icon.png",
-      "type": "image/png",
+      "src": "Icon.jpeg",
+      "type": "image/jpeg",
       "sizes": "192x192"
     }
   ],
