--- a/vercel.json
+++ b/vercel.json
@@ -20,15 +20,15 @@
     },
     {
       "src": "/(static/.*)",
-      "dest": "frontend/$1"
+      "dest": "frontend/build/$1"
     },
     {
-      "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|ico|json))",
-      "dest": "frontend/$1"
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|svg|ico|json|woff|woff2|ttf|eot))",
+      "dest": "frontend/build/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "frontend/index.html"
+      "dest": "frontend/build/index.html"
     }
   ]
 }
